fix(style): Prevent image overflow

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -43,6 +43,10 @@ blockquote {
   border-left: 0.1em solid #dfe2e5;
 }
 
+img {
+  max-width: 100%;
+}
+
 /* Code Block */
 
 code.hljs {
